--- a/ch-modules.html
+++ b/ch-modules.html
@@ -659,7 +659,7 @@ window.MathJax = {
 <ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-adv-functions.html#ch-adv-functions-6-3" class="internal"><span class="codenumber">19.4.1</span> <span class="title">Keyword Arguments for complex functions</span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-adv-functions.html#sect-parametric-methods" class="internal"><span class="codenumber">19.5</span> <span class="title">Parametric Methods</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-adv-functions.html#ch-adv-functions-8" class="internal"><span class="codenumber">19.6</span> <span class="title">Updating Function arguments</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-adv-functions.html#ch-adv-functions-8" class="internal"><span class="codenumber">19.6</span> <span class="title">Function Arguments</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter active">
@@ -980,10 +980,7 @@ window.MathJax = {
 <div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-3" class="internal"><span class="codenumber">A.1</span> <span class="title">using the <code class="code-inline tex2jax_ignore">Repl.it</code> website</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-3-3" class="internal"><span class="codenumber">A.1.1</span> <span class="title">Limitations of <code class="code-inline tex2jax_ignore">Repl.it</code></span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-4" class="internal"><span class="codenumber">A.2</span> <span class="title">Downloading and Installing Julia</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-4-3" class="internal"><span class="codenumber">A.2.1</span> <span class="title">The julia REPL and windows</span></a></div></li></ul>
-</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-4" class="internal"><span class="codenumber">A.2</span> <span class="title">Downloading and Installing Julia</span></a></div></li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5" class="internal"><span class="codenumber">A.3</span> <span class="title">Downloading and running Jupyter</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-subsection">
@@ -1003,17 +1000,13 @@ window.MathJax = {
 </li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel" class="internal"><span class="codenumber">A.7</span> <span class="title">The kernel</span></a></div>
-<ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel-3" class="internal"><span class="codenumber">A.7.1</span> <span class="title">The REPL</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel-4" class="internal"><span class="codenumber">A.7.2</span> <span class="title">Juno and the Atom Editor</span></a></div></li>
-</ul>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel-3" class="internal"><span class="codenumber">A.7.1</span> <span class="title">The REPL</span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10" class="internal"><span class="codenumber">A.8</span> <span class="title">Restarting the Kernel</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-3" class="internal"><span class="codenumber">A.8.1</span> <span class="title">Restarting the Kernel in the julia REPL</span></a></div></li>
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-4" class="internal"><span class="codenumber">A.8.2</span> <span class="title">Restarting the Kernel in Jupyter</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-5" class="internal"><span class="codenumber">A.8.3</span> <span class="title">Restarting the Kernel in Atom/Juno</span></a></div></li>
 </ul>
 </li>
 </ul>
