Latest build deployed.

--- a/frontmatter.html
+++ b/frontmatter.html
@@ -152,9 +152,12 @@ window.MathJax = {
 #ch-num-int-3-17-1 { counter-set: ch-num-int-3-17-1 0; }
 #ch-num-int-3-17-1 > li::marker { content: ""counter(ch-num-int-3-17-1,decimal)"."; }
 #ch-num-int-3-17-1 > li { counter-increment: ch-num-int-3-17-1; }
-#ch-getting-started-5-3-3-3-1 { counter-set: ch-getting-started-5-3-3-3-1 0; }
-#ch-getting-started-5-3-3-3-1 > li::marker { content: ""counter(ch-getting-started-5-3-3-3-1,decimal)"."; }
-#ch-getting-started-5-3-3-3-1 > li { counter-increment: ch-getting-started-5-3-3-3-1; }
+#sect-installing-vscode-7-1 { counter-set: sect-installing-vscode-7-1 0; }
+#sect-installing-vscode-7-1 > li::marker { content: ""counter(sect-installing-vscode-7-1,decimal)"."; }
+#sect-installing-vscode-7-1 > li { counter-increment: sect-installing-vscode-7-1; }
+#ch-getting-started-7-3-3-3-1 { counter-set: ch-getting-started-7-3-3-3-1 0; }
+#ch-getting-started-7-3-3-3-1 > li::marker { content: ""counter(ch-getting-started-7-3-3-3-1,decimal)"."; }
+#ch-getting-started-7-3-3-3-1 > li { counter-increment: ch-getting-started-7-3-3-3-1; }
 #ch-num-rep-5-3-1 { counter-set: ch-num-rep-5-3-1 0; }
 #ch-num-rep-5-3-1 > li::marker { content: ""counter(ch-num-rep-5-3-1,decimal)"."; }
 #ch-num-rep-5-3-1 > li { counter-increment: ch-num-rep-5-3-1; }
@@ -976,28 +979,28 @@ window.MathJax = {
 <li class="toc-item toc-appendix">
 <div class="toc-title-box"><a href="ch-getting-started.html" class="internal"><span class="codenumber">A</span> <span class="title">Getting Started with Julia</span></a></div>
 <ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#sect-installing-julia" class="internal"><span class="codenumber">A.1</span> <span class="title">Downloading and Installing Julia</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#sect-installing-vscode" class="internal"><span class="codenumber">A.2</span> <span class="title">Installing Visual Studio Code</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-3" class="internal"><span class="codenumber">A.1</span> <span class="title">using the <code class="code-inline tex2jax_ignore">Repl.it</code> website</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-3-3" class="internal"><span class="codenumber">A.1.1</span> <span class="title">Limitations of <code class="code-inline tex2jax_ignore">Repl.it</code></span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5" class="internal"><span class="codenumber">A.3</span> <span class="title">Running Julia code inside VSCode</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5-3" class="internal"><span class="codenumber">A.3.1</span> <span class="title">Running a Julia REPL</span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-4" class="internal"><span class="codenumber">A.2</span> <span class="title">Downloading and Installing Julia</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5" class="internal"><span class="codenumber">A.3</span> <span class="title">Downloading and running Jupyter</span></a></div>
+<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-6" class="internal"><span class="codenumber">A.4</span> <span class="title">using the <code class="code-inline tex2jax_ignore">Repl.it</code> website</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-6-3" class="internal"><span class="codenumber">A.4.1</span> <span class="title">Limitations of <code class="code-inline tex2jax_ignore">Repl.it</code></span></a></div></li></ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7" class="internal"><span class="codenumber">A.5</span> <span class="title">Downloading and running Jupyter</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-subsection">
-<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5-3" class="internal"><span class="codenumber">A.3.1</span> <span class="title">Installing Jupyter on Mac</span></a></div>
+<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7-3" class="internal"><span class="codenumber">A.5.1</span> <span class="title">Installing Jupyter on Mac</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5-3-3" class="internal"><span class="codenumber">A.3.1.1</span> <span class="title">Installing Python</span></a></div></li>
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5-3-4" class="internal"><span class="codenumber">A.3.1.2</span> <span class="title">Installing IJulia</span></a></div></li>
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-5-3-5" class="internal"><span class="codenumber">A.3.1.3</span> <span class="title">Running Jupyter</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7-3-3" class="internal"><span class="codenumber">A.5.1.1</span> <span class="title">Installing Python</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7-3-4" class="internal"><span class="codenumber">A.5.1.2</span> <span class="title">Installing IJulia</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7-3-5" class="internal"><span class="codenumber">A.5.1.3</span> <span class="title">Running Jupyter</span></a></div></li>
 </ul>
 </li></ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-6" class="internal"><span class="codenumber">A.4</span> <span class="title">Using Jupyter</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-7" class="internal"><span class="codenumber">A.5</span> <span class="title">Installing Visual Studio Code</span></a></div></li>
-<li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-8" class="internal"><span class="codenumber">A.6</span> <span class="title">Running Julia code inside VSCode</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-8-3" class="internal"><span class="codenumber">A.6.1</span> <span class="title">Running a Julia REPL</span></a></div></li></ul>
-</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-8" class="internal"><span class="codenumber">A.6</span> <span class="title">Using Jupyter</span></a></div></li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel" class="internal"><span class="codenumber">A.7</span> <span class="title">The kernel</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#sect-kernel-3" class="internal"><span class="codenumber">A.7.1</span> <span class="title">The REPL</span></a></div></li></ul>
@@ -1007,6 +1010,7 @@ window.MathJax = {
 <ul class="structural toc-item-list">
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-3" class="internal"><span class="codenumber">A.8.1</span> <span class="title">Restarting the Kernel in the julia REPL</span></a></div></li>
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-4" class="internal"><span class="codenumber">A.8.2</span> <span class="title">Restarting the Kernel in Jupyter</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-getting-started.html#ch-getting-started-10-5" class="internal"><span class="codenumber">A.8.3</span> <span class="title">Restarting the Kernel in VSCode</span></a></div></li>
 </ul>
 </li>
 </ul>
@@ -1059,7 +1063,7 @@ window.MathJax = {
 <div class="author-name">Peter Staab</div>
 <div class="author-info">Department of Mathematics<br>Fitchburg State University</div>
 </div>
-<div class="date">August 30, 2024</div>
+<div class="date">September 1, 2024</div>
 <nav class="summary-links"><ul><li><a href="frontmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="frontmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
