Latest build deployed.

--- a/frontmatter.html
+++ b/frontmatter.html
@@ -92,9 +92,9 @@ window.MathJax = {
 <link href="_static/pretext/css/colors_blue_red.css" rel="stylesheet" type="text/css">
 <link href="_static/pretext/css/setcolors.css" rel="stylesheet" type="text/css">
 <style>
-#ch-intro-functions-2-2-1 { counter-set: ch-intro-functions-2-2-1 0; }
-#ch-intro-functions-2-2-1 > li::marker { content: ""counter(ch-intro-functions-2-2-1,decimal)"."; }
-#ch-intro-functions-2-2-1 > li { counter-increment: ch-intro-functions-2-2-1; }
+#ch-intro-functions-3-2-1 { counter-set: ch-intro-functions-3-2-1 0; }
+#ch-intro-functions-3-2-1 > li::marker { content: ""counter(ch-intro-functions-3-2-1,decimal)"."; }
+#ch-intro-functions-3-2-1 > li { counter-increment: ch-intro-functions-3-2-1; }
 #sect-comprehensions-8-1-2-1 { counter-set: sect-comprehensions-8-1-2-1 0; }
 #sect-comprehensions-8-1-2-1 > li::marker { content: ""counter(sect-comprehensions-8-1-2-1,decimal)"."; }
 #sect-comprehensions-8-1-2-1 > li { counter-increment: sect-comprehensions-8-1-2-1; }
@@ -210,40 +210,40 @@ window.MathJax = {
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-variables.html" class="internal"><span class="codenumber">2</span> <span class="title">Storing number and strings and using Julia syntax</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-3" class="internal"><span class="codenumber">2.1</span> <span class="title">Numbers</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-4" class="internal"><span class="codenumber">2.1</span> <span class="title">Numbers</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-variables.html#ch-variables-4" class="internal"><span class="codenumber">2.2</span> <span class="title">Assignment Statement and Variables</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-4-3" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Storing Variable in a Virtual Whiteboard</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-variables.html#ch-variables-5" class="internal"><span class="codenumber">2.2</span> <span class="title">Assignment Statement and Variables</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-5-3" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Storing Variable in a Virtual Whiteboard</span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-variables.html#ch-variables-5" class="internal"><span class="codenumber">2.3</span> <span class="title">Strings</span></a></div>
+<div class="toc-title-box"><a href="ch-variables.html#ch-variables-6" class="internal"><span class="codenumber">2.3</span> <span class="title">Strings</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-5-3" class="internal"><span class="codenumber">2.3.1</span> <span class="title">String Operations</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-5-4" class="internal"><span class="codenumber">2.3.2</span> <span class="title">String Interpolation</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-5-5" class="internal"><span class="codenumber">2.3.3</span> <span class="title">Other String Functions</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-6-3" class="internal"><span class="codenumber">2.3.1</span> <span class="title">String Operations</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-6-4" class="internal"><span class="codenumber">2.3.2</span> <span class="title">String Interpolation</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-6-5" class="internal"><span class="codenumber">2.3.3</span> <span class="title">Other String Functions</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-6" class="internal"><span class="codenumber">2.4</span> <span class="title">Expressions</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-7" class="internal"><span class="codenumber">2.4</span> <span class="title">Expressions</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#sect-oper-precedence" class="internal"><span class="codenumber">2.5</span> <span class="title">Operator Precendence</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-8" class="internal"><span class="codenumber">2.6</span> <span class="title">Comments</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-variables.html#ch-variables-9" class="internal"><span class="codenumber">2.6</span> <span class="title">Comments</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-data-types.html" class="internal"><span class="codenumber">3</span> <span class="title">Introduction to Data Types</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-3" class="internal"><span class="codenumber">3.1</span> <span class="title">Integers</span></a></div>
+<div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-4" class="internal"><span class="codenumber">3.1</span> <span class="title">Integers</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-3-3" class="internal"><span class="codenumber">3.1.1</span> <span class="title">Unsigned Integers</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-3-4" class="internal"><span class="codenumber">3.1.2</span> <span class="title">Signed Integers</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-3-5" class="internal"><span class="codenumber">3.1.3</span> <span class="title">Overflow and Underflow of integer operations</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-4-3" class="internal"><span class="codenumber">3.1.1</span> <span class="title">Unsigned Integers</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-4-4" class="internal"><span class="codenumber">3.1.2</span> <span class="title">Signed Integers</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-4-5" class="internal"><span class="codenumber">3.1.3</span> <span class="title">Overflow and Underflow of integer operations</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-4" class="internal"><span class="codenumber">3.2</span> <span class="title">Floating Point Numbers</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-5" class="internal"><span class="codenumber">3.3</span> <span class="title">Extending integers, the <code class="code-inline tex2jax_ignore">BigInt</code> type</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-5" class="internal"><span class="codenumber">3.2</span> <span class="title">Floating Point Numbers</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-6" class="internal"><span class="codenumber">3.3</span> <span class="title">Extending integers, the <code class="code-inline tex2jax_ignore">BigInt</code> type</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-6" class="internal"><span class="codenumber">3.4</span> <span class="title">Extending Floating Point Numbers with <code class="code-inline tex2jax_ignore">BigFloat</code></span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-6-3" class="internal"><span class="codenumber">3.4.1</span> <span class="title">Limitations of <code class="code-inline tex2jax_ignore">BigFloats</code></span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-7" class="internal"><span class="codenumber">3.4</span> <span class="title">Extending Floating Point Numbers with <code class="code-inline tex2jax_ignore">BigFloat</code></span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-data-types.html#ch-data-types-7-3" class="internal"><span class="codenumber">3.4.1</span> <span class="title">Limitations of <code class="code-inline tex2jax_ignore">BigFloats</code></span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="ch-data-types.html#sect-rational-numbers" class="internal"><span class="codenumber">3.5</span> <span class="title">Rational numbers</span></a></div>
@@ -279,25 +279,22 @@ window.MathJax = {
 <div class="toc-title-box"><a href="ch-intro-functions.html" class="internal"><span class="codenumber">4</span> <span class="title">Introduction to Functions</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#sect-simple-example" class="internal"><span class="codenumber">4.1</span> <span class="title">Simple example</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-4" class="internal"><span class="codenumber">4.2</span> <span class="title">Function Arguments</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-5" class="internal"><span class="codenumber">4.2</span> <span class="title">Function Arguments</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-5" class="internal"><span class="codenumber">4.3</span> <span class="title">Returning values from a function</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-5-3" class="internal"><span class="codenumber">4.3.1</span> <span class="title">Indentation in Functions</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-6" class="internal"><span class="codenumber">4.3</span> <span class="title">Returning values from a function</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-6-3" class="internal"><span class="codenumber">4.3.1</span> <span class="title">Indentation in Functions</span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-6" class="internal"><span class="codenumber">4.4</span> <span class="title">Specifying Argument Types</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-7" class="internal"><span class="codenumber">4.4</span> <span class="title">Specifying Argument Types</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-7" class="internal"><span class="codenumber">4.5</span> <span class="title">Multiple Dispatch</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-7-3" class="internal"><span class="codenumber">4.5.1</span> <span class="title">Multiple Dispatch of built-in functions</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-8" class="internal"><span class="codenumber">4.5</span> <span class="title">Multiple Dispatch</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-8-3" class="internal"><span class="codenumber">4.5.1</span> <span class="title">Multiple Dispatch of built-in functions</span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#sect-varargs" class="internal"><span class="codenumber">4.6</span> <span class="title">Variable Number of arguments</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-9" class="internal"><span class="codenumber">4.7</span> <span class="title">Multiple Return Values</span></a></div></li>
-<li class="toc-item toc-section">
-<div class="toc-title-box"><a href="ch-intro-functions.html#sect-factorial" class="internal"><span class="codenumber">4.8</span> <span class="title">Factorial Function</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="ch-intro-functions.html#sect-factorial-3" class="internal"><span class="codenumber">4.8.1</span> <span class="title">Exercise</span></a></div></li></ul>
-</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-10" class="internal"><span class="codenumber">4.7</span> <span class="title">Multiple Return Values</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#sect-factorial" class="internal"><span class="codenumber">4.8</span> <span class="title">Factorial Function</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#sect-recursion" class="internal"><span class="codenumber">4.9</span> <span class="title">Recursive Functions</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-12" class="internal"><span class="codenumber">4.10</span> <span class="title">Variable Scope</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-13" class="internal"><span class="codenumber">4.11</span> <span class="title">Summary of Function basics</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-13" class="internal"><span class="codenumber">4.10</span> <span class="title">Variable Scope</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-intro-functions.html#ch-intro-functions-14" class="internal"><span class="codenumber">4.11</span> <span class="title">Summary of Function basics</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter">
@@ -1073,7 +1070,7 @@ window.MathJax = {
 <div class="author-name">Peter Staab</div>
 <div class="author-info">Department of Mathematics<br>Fitchburg State University</div>
 </div>
-<div class="date">September 5, 2024</div>
+<div class="date">September 6, 2024</div>
 <nav class="summary-links"><ul><li><a href="frontmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="frontmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
